--- a/dot_ssh/config
+++ b/dot_ssh/config
@@ -3,3 +3,6 @@ Host *
   ControlMaster auto
   ControlPersist yes
   ControlPath ~/.ssh/sockets/socket-%r@%h:%p
+
+Host chonk.samcday.com
+  Hostname 192.168.250.1
