[makepkg.conf] centralize src/pkg, native build opts

--- a/dot_makepkg.conf
+++ b/dot_makepkg.conf
@@ -1,5 +1,16 @@
-MAKEFLAGS="-j8"
+# Keep all makepkg src artifacts and packages in a central place.
+# This way we can exclude it from indexing to save KDE from itself.
+PKGDEST=$HOME/.makepkg/pkg/
+SRCDEST=$HOME/.makepkg/src/
+SRCPKGDEST=$HOME/.makepkg/srcpkg/
+
+# Build speed go brrrrrr
+MAKEFLAGS="-j$(nproc)"
 COMPRESSXZ=(xz -c -z - --threads=0)
 COMPRESSGZ=(pigz -c -f -n)
 COMPRESSBZ2=(pbzip2 -c -f)
 COMPRESSZST=(zstd -c -z -q - --threads=0)
+
+# Since this is my personal makepkg config, build for my native arch.
+CFLAGS="-march=native -O2 -pipe -fno-plt"
+CXXFLAGS="-march=native -O2 -pipe -fno-plt"
