--- a/dot_makepkg.conf
+++ b/dot_makepkg.conf
@@ -3,6 +3,8 @@
 PKGDEST=$HOME/.makepkg/pkg/
 SRCDEST=$HOME/.makepkg/src/
 SRCPKGDEST=$HOME/.makepkg/srcpkg/
+LOGDEST=$HOME/.makepkg/logs/
+BUILDDIR=$HOME/.makepkg/build/
 
 # Build speed go brrrrrr
 MAKEFLAGS="-j$(nproc)"
