[sway] inhibit lock when in browser fullscreen

--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -73,4 +73,6 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 
+for_window [window_role="browser"] inhibit_idle fullscreen
+
 include /etc/sway/config.d/*
