[swaylock] ignore empty password, remove pixellate effect, increase blur effect

--- a/dot_config/swaylock/config
+++ b/dot_config/swaylock/config
@@ -1,10 +1,10 @@
+ignore-empty-password
 screenshots
 clock
 indicator-idle-visible
 indicator-radius=100
 indicator-thickness=7
-effect-blur=5x10
-effect-pixelate=5
+effect-blur=7x10
 effect-vignette=0.5:0.5
 ring-color=000000
 key-hl-color=ffffff
