--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -1,6 +1,6 @@
 set $mod Mod4
 set $term alacritty
-set $menu bemenu-run | xargs swaymsg exec --
+set $menu bemenu-run
 set $resize_incr 10px
 
 output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
