--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -69,7 +69,10 @@ bindsym --locked XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ to
 bindsym --locked XF86AudioPlay exec playerctl -a play-pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
-
+bindsym --locked XF86MonBrightnessDown exec brightnessctl set 5%-
+bindsym --locked XF86MonBrightnessUp exec brightnessctl set +5%
+bindsym --locked XF86KbdBrightnessDown exec brightnessctl -d spi::kbd_backlight set 5%-
+bindsym --locked XF86KbdBrightnessUp exec brightnessctl -d spi::kbd_backlight set +5%
 
 bindsym $mod+f fullscreen
 
