[sway] use mojave dynamic bg

--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -3,8 +3,6 @@ set $term alacritty
 set $menu bemenu-run
 set $resize_incr 10px
 
-output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
-
 output "Goldstar Company Ltd 27GL850 911NTHM85065" {
   adaptive_sync on
   max_render_time 1
@@ -101,3 +99,4 @@ for_window [app_id="firefox"] inhibit_idle fullscreen
 include /etc/sway/config.d/*
 
 exec firefox-developer-edition
+exec settimed mojave-timed
