--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -60,9 +60,9 @@ bindsym $mod+v splitv
 #bindsym $mod+e layout toggle split
 
 # Ripped straight from https://wiki.archlinux.org/index.php/Sway#Custom_keybindings
-bindsym --locked XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
-bindsym --locked XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
-bindsym --locked XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
+bindsym --locked XF86AudioRaiseVolume exec pamixer -ui 2 && pamixer --get-volume > $SWAYSOCK.wob
+bindsym --locked XF86AudioLowerVolume exec pamixer -ud 2 && pamixer --get-volume > $SWAYSOCK.wob
+bindsym --locked XF86AudioMute exec pamixer --toggle-mute && ( pamixer --get-mute && echo 0 > $SWAYSOCK.wob ) || pamixer --get-volume > $SWAYSOCK.wob
 bindsym --locked XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
 bindsym --locked XF86AudioPlay exec playerctl -a play-pause
 bindsym XF86AudioNext exec playerctl next
@@ -100,3 +100,4 @@ include /etc/sway/config.d/*
 
 exec firefox-developer-edition
 exec settimed mojave-timed
+exec mkfifo $SWAYSOCK.wob && tail -f $SWAYSOCK.wob | wob
