--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -60,17 +60,17 @@ bindsym $mod+v splitv
 #bindsym $mod+e layout toggle split
 
 # Ripped straight from https://wiki.archlinux.org/index.php/Sway#Custom_keybindings
-bindsym --locked XF86AudioRaiseVolume exec pamixer -ui 2 && pamixer --get-volume > $SWAYSOCK.wob
-bindsym --locked XF86AudioLowerVolume exec pamixer -ud 2 && pamixer --get-volume > $SWAYSOCK.wob
-bindsym --locked XF86AudioMute exec pamixer --toggle-mute && ( pamixer --get-mute && echo 0 > $SWAYSOCK.wob ) || pamixer --get-volume > $SWAYSOCK.wob
+bindsym --locked XF86AudioRaiseVolume exec pamixer -ui 5 && mywob $(pamixer --get-volume)
+bindsym --locked XF86AudioLowerVolume exec pamixer -ud 5 && mywob $(pamixer --get-volume)
+bindsym --locked XF86AudioMute exec pamixer --toggle-mute && ( pamixer --get-mute && mywob 0 ) || mywob $(pamixer --get-volume)
 bindsym --locked XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
 bindsym --locked XF86AudioPlay exec playerctl -a play-pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
-bindsym --locked XF86MonBrightnessDown exec brightnessctl set 5%-
-bindsym --locked XF86MonBrightnessUp exec brightnessctl set +5%
-bindsym --locked XF86KbdBrightnessDown exec brightnessctl -d spi::kbd_backlight set 5%-
-bindsym --locked XF86KbdBrightnessUp exec brightnessctl -d spi::kbd_backlight set +5%
+bindsym --locked XF86MonBrightnessDown exec mywob $(brightnessctl set 5%- -m | cut -d',' -f4 | head -c-2)
+bindsym --locked XF86MonBrightnessUp exec mywob $(brightnessctl set +5% -m | cut -d',' -f4 | head -c-2)
+bindsym --locked XF86KbdBrightnessDown exec mywob $(brightnessctl -m -d spi::kbd_backlight set 5%- | cut -d',' -f4 | head -c-2)
+bindsym --locked XF86KbdBrightnessUp exec mywob $(brightnessctl -m -d spi::kbd_backlight set +5% | cut -d',' -f4 | head -c-2)
 
 bindsym $mod+f fullscreen
 
