--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -110,5 +110,6 @@ for_window [instance="chromium"] inhibit_idle fullscreen
 
 exec mkfifo $SWAYSOCK.wob
 exec chromium
+exec element-desktop
 
 include /etc/sway/config.d/*
