[sway] pin element to workspace 9

--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -111,6 +111,8 @@ for_window [instance="chromium"] {
   border none
 }
 
+assign [instance="element"] → 9 
+
 exec mkfifo $SWAYSOCK.wob
 exec chromium
 exec element-desktop
