--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -96,25 +96,30 @@ bindsym $mod+r mode "resize"
 bindsym Ctrl+Space exec dbus-send --session --print-reply --dest=net.launchpad.ulauncher \
   /net/launchpad/ulauncher net.launchpad.ulauncher.toggle_window > /dev/null
 
-for_window [app_id="ulauncher"] {
+for_window [app_id=ulauncher] {
   border none
   floating enable
 }
 
-for_window [title="win0" class="jetbrains-clion"] {
+for_window [title=win0 class=jetbrains-clion] {
   floating enable
 }
 
-assign [instance="chromium"] → 2
-for_window [instance="chromium"] {
+for_window [instance=chromium] {
   inhibit_idle fullscreen
   border none
+  move window to workspace 2
+  focus_on_window_activation none
 }
 
-assign [instance="element"] → 9 
+for_window [instance=element] {
+  border none
+  move window to workspace 9
+}
 
 exec mkfifo $SWAYSOCK.wob
 exec chromium
 exec element-desktop
+exec 'sleep 5; swaymsg for_window [instance=chromium] focus_on_window_activation focus'
 
 include /etc/sway/config.d/*
