--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -121,5 +121,6 @@ exec mkfifo $SWAYSOCK.wob
 exec chromium
 exec element-desktop
 exec 'sleep 5; swaymsg for_window [instance=chromium] focus_on_window_activation focus'
+exec_always 'setrandom ~/.local/share/backgrounds'
 
 include /etc/sway/config.d/*
