--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -120,7 +120,7 @@ for_window [instance=element] {
 exec mkfifo $SWAYSOCK.wob
 exec chromium
 exec element-desktop
-exec 'sleep 5; swaymsg for_window [instance=chromium] focus_on_window_activation focus'
+exec_always 'sleep 5; swaymsg for_window [instance=chromium] focus_on_window_activation focus'
 exec_always 'setrandom ~/.local/share/backgrounds'
 
 include /etc/sway/config.d/*
