[gammastep] give up on geoclue2 for now.

--- a/dot_config/gammastep/config.ini
+++ b/dot_config/gammastep/config.ini
@@ -2,5 +2,9 @@
 temp-day=5700
 temp-night=2500
 fade=1
-location-provider=geoclue2
+location-provider=manual
 adjustment-method=wayland
+
+[manual]
+lat=52.498644
+lon=13.473454
