[sway] remove chromium hax, use regular firefox

--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -112,11 +112,10 @@ for_window [title=win0 class=jetbrains-clion] {
   floating enable
 }
 
-for_window [app_id=firefoxdeveloperedition] {
+for_window [app_id=firefox] {
   inhibit_idle fullscreen
   border none
   move window to workspace 2
-  focus_on_window_activation none
 }
 
 for_window [instance=element] {
@@ -129,7 +128,6 @@ for_window [app_id=spotify-qt] floating enable
 exec mkfifo $SWAYSOCK.wob
 exec firefoxdeveloperedition
 exec element-desktop
-exec_always 'sleep 5; swaymsg for_window [instance=chromium] focus_on_window_activation focus'
 exec_always 'setrandom ~/.local/share/backgrounds'
 
 include /etc/sway/config.d/*
