--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -126,6 +126,8 @@ for_window [instance=element] {
 
 for_window [app_id=spotify-qt] floating enable
 
+for_window [app_id=zenity] floating enable
+
 exec mkfifo $SWAYSOCK.wob
 exec $browser
 exec element-desktop
