--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -18,6 +18,7 @@ input type:touchpad {
   # But I think I'd prefer this on any kind of touchpad.
   accel_profile adaptive
   natural_scroll enabled
+  click_method clickfinger
 }
 
 bindsym $mod+Return exec $term
