--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -5,8 +5,7 @@ set $resize_incr 10px
 set $browser firefox
 
 output "Goldstar Company Ltd 27GL850 911NTHM85065" {
-  adaptive_sync on
-  max_render_time 1
+  mode 2560x1440@60Hz
 }
 
 output "Apple Computer Inc Color LCD 0x00000000" {
@@ -134,5 +133,8 @@ exec mkfifo $SWAYSOCK.wob
 exec $browser
 exec element-desktop
 exec_always 'setrandom ~/.local/share/backgrounds'
+
+# Toggle the laptop display on/off when lid is opened/closed.
+bindswitch lid:toggle exec swaymsg output eDP-1 toggle
 
 include /etc/sway/config.d/*
