--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -135,6 +135,7 @@ exec element-desktop
 exec_always 'setrandom ~/.local/share/backgrounds'
 
 # Toggle the laptop display on/off when lid is opened/closed.
-bindswitch lid:toggle exec swaymsg output eDP-1 toggle
+bindswitch lid:on exec swaymsg output eDP-1 disable
+bindswitch lid:off exec swaymsg output eDP-1 enable
 
 include /etc/sway/config.d/*
