try ungoogled-chromium again for a bit

--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -2,7 +2,6 @@ set $mod Mod4
 set $term alacritty
 set $menu bemenu-run
 set $resize_incr 10px
-set $browser firefox
 
 output "Goldstar Company Ltd 27GL850 911NTHM85065" {
   mode 2560x1440@60Hz
@@ -114,7 +113,13 @@ for_window [title=win0 class=jetbrains-clion] {
   floating enable
 }
 
-for_window [app_id=$browser] {
+for_window [app_id=firefox] {
+  inhibit_idle fullscreen
+  border none
+  move window to workspace 2
+}
+
+for_window [instance=chromium] {
   inhibit_idle fullscreen
   border none
   move window to workspace 2
@@ -130,7 +135,7 @@ for_window [app_id=spotify-qt] floating enable
 for_window [app_id=zenity] floating enable
 
 exec mkfifo $SWAYSOCK.wob
-exec $browser
+exec chromium
 exec element-desktop
 exec_always 'setrandom ~/.local/share/backgrounds'
 
