spotifyd likes quotes now

--- a/dot_config/spotifyd/spotifyd.conf
+++ b/dot_config/spotifyd/spotifyd.conf
@@ -1,7 +1,7 @@
 [global]
-username = samcday
-password_cmd = cat ~/.spotifypass
-backend = pulseaudio
-cache_path = /home/sam/.cache/spotifyd
+username = "samcday"
+password_cmd = "cat ~/.spotifypass"
+backend = "pulseaudio"
+cache_path = "/home/sam/.cache/spotifyd"
 bitrate = 320
-device_type = computer
+device_type = "computer"
