--- a/dot_ssh/config
+++ b/dot_ssh/config
@@ -3,6 +3,7 @@ Host *
   ControlMaster auto
   ControlPersist yes
   ControlPath ~/.ssh/sockets/socket-%r@%h:%p
+  ServerAliveInterval 45
 
 Host chonk.samcday.com chonk.wgme chonk
   Hostname 192.168.250.1
