--- a/dot_ssh/config
+++ b/dot_ssh/config
@@ -3,7 +3,8 @@ Host *
   ControlMaster auto
   ControlPersist yes
   ControlPath ~/.ssh/sockets/%r@%h:%p
-  ServerAliveInterval 15
+  ServerAliveInterval 5
+  ServerAliveCountMax 3
 
 Host chonk.samcday.com chonk.wgme chonk
   Hostname 192.168.250.1
